@@ -1,7 +1,8 @@
 package com.github.dabasan.jxm.properties.config;
 
 import java.io.IOException;
-import java.io.InputStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.function.Function;
 
 /**
@@ -10,13 +11,13 @@ import java.util.function.Function;
  * @author maeda6uiui
  */
 class ConfigReader {
-    private final JXMConfig config;
+    private final XOPSConfig config;
 
-    public ConfigReader(InputStream is) throws IOException {
-        config = new JXMConfig();
+    public ConfigReader(Path path) throws IOException {
+        config = new XOPSConfig();
 
-        //Read all bytes from a stream
-        byte[] bin = is.readAllBytes();
+        //Read all bytes
+        byte[] bin = Files.readAllBytes(path);
 
         var keyCodes = KeyCode.values();
 
@@ -73,7 +74,7 @@ class ConfigReader {
         return name.substring(0, firstNullPos);
     }
 
-    public JXMConfig getConfig() {
+    public XOPSConfig getConfig() {
         return config;
     }
 }
